# dual_arm_manipulator

./: CMakeLists.txt  README.md  package.xml
include/dual_arm_manipulator/: DualArmManipulatorInverseKinematics.h  dual_arm_manipulator_control.h
src/: DualArmManipulatorDirectKinematics.cpp  DualArmManipulatorInverseKinematics.cpp  Tf2.cpp  dual_arm_manipulator_control.cpp
